# AerRacers

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  Setings.DotSettings
common/aer_lib/: CMakeLists.txt  test_hierarchy.cpp
common/aer_lib/data/materials/: test.aermat
common/aer_lib/data/scenes/: LevelDesign05-04.aerscene  LevelDesign05-04WP.aerscene  LevelDesign24-03.aerscene  PhysicsScene1-02-02.aerscene  PhysicsScene2-01-27.aerscene  PlayGroundLuca2021-02-23.aerscene  PlayGroundLuca2021-03-01withoutShip.aerscene  PlaygroundTest2021-02-03-11-20-04.aerscene  SceneForNeko02-18withship.aerscene  SceneForNeko2021-02-17-09-51-08.aerscene  WaypointTest.aerscene  test_leveldesign.aerscene  writed_scene.aerscene
common/aer_lib/include/: aer_engine.h  binded_input_manager.h  draw_system.h  gizmos_renderer.h  inputs_binding_manager.h  log.h  prefab.h  scene.h  tag.h
common/aer_lib/include/Editor/: tools_system.h
common/aer_lib/include/aer/: aer_engine.h  draw_system.h  frustum.h  gizmos_renderer.h  inputs_binding_manager.h  log.h  prefab.h  scene.h  tag.h
common/aer_lib/include/editor/: EditorToolInterface.h  editor.h  editor_tool_interface.h  editor_tool_manager.h  sample_browser.h  tool.h  tool_manager.h
common/aer_lib/include/physics/: collider.h  contact.h  physics.h  raycast.h  rigidbody.h
common/aer_lib/src/: aer_engine.cpp  binded_input_manager.cpp  draw_system.cpp  frustum.cpp  gizmos_renderer.cpp  inputs_binding_manager.cpp  log.cpp  prefab.cpp  scene.cpp  tag.cpp
common/aer_lib/src/06_hello_model/: model_program.cpp
common/aer_lib/src/Editor/: tools_system.cpp
common/aer_lib/src/editor/: editor.cpp  editor_tool_interface.cpp  editor_tool_manager.cpp  sample_browser.cpp  tool_manager.cpp
common/aer_lib/src/game/: game_camera.cpp
common/aer_lib/src/managers/: camera_controller_manager.cpp  game_manager.cpp  inputs_binding_manager.cpp  light_manager.cpp  menu_manager.cpp  player_manager.cpp  render_manager.cpp  ship_controller_manager.cpp  ship_input_manager.cpp  waypoint_manager.cpp
common/aer_lib/src/physics/: collider.cpp  contact.cpp  physics.cpp  raycast.cpp  rigidbody.cpp
common/aer_lib/src/ui/: ui_button.cpp  ui_element.cpp  ui_image.cpp  ui_manager.cpp  ui_text.cpp
common/aer_lib/test/: test_arts.cpp  test_editor.cpp  test_engine.cpp  test_fmod.cpp  test_gizmos.cpp  test_hierarchy.cpp  test_input.cpp  test_level_design.cpp  test_lights.cpp  test_log.cpp  test_logger.cpp  test_materials.cpp  test_multi.cpp  test_physx.cpp  test_playground.cpp  test_renderer.cpp  test_scene.cpp  test_scene_loader.cpp  test_shaders.cpp  test_ship.cpp  test_ship_controller.cpp  test_ui.cpp
common/aerlib/: CMakeLists.txt
common/aerlib/include/: aer_engine.h  draw_system.h
common/aerlib/src/: aer_engine.cpp  draw_system.cpp
common/fmod_wrapper/: CMakeLists.txt
common/fmod_wrapper/include/fmod/: audio_manager.h  error_handler.h  fmod_engine.h  source.h
common/fmod_wrapper/src/: audio_manager.cpp  error_handler.cpp  fmod_engine.cpp  source.cpp
common/physx_wrapper/: CMakeLists.txt
common/physx_wrapper/include/: collider.h  contact.h  material.h  physics_callbacks.h  physics_engine.h  raycast.h  rigidbody.h  shape.h
common/physx_wrapper/include/px/: collider.h  filter_group.h  physics_callbacks.h  physics_engine.h  physx_utility.h  raycast.h  rigidbody.h
common/physx_wrapper/src/: contact.cpp  material.cpp  physics_callback.cpp  physics_engine.cpp  raycast.cpp  rigidbody.cpp  shape.cpp
common/vulkan_wrapper/: CMakeLists.txt
common/vulkan_wrapper/include/vk/: graphics.h  shader.h  sync_objects.h  vk_error_handler.h  vk_imgui.h  vk_include.h  vk_resources.h  vk_utilities.h  vulkan_include.h  vulkan_wrapper_pch.h
common/vulkan_wrapper/src/: graphics.cpp  shader.cpp  sync_objects.cpp  vk_error_handler.cpp  vk_imgui.cpp  vk_resources.cpp  vk_utilities.cpp
common/vulkan_wrapper/src/buffers/: buffer.cpp  index_buffer.cpp  instance_buffer.cpp  push_handle.cpp  storage_buffer.cpp  storage_handle.cpp  uniform_buffer.cpp  uniform_handle.cpp  vertex_buffer.cpp
common/vulkan_wrapper/src/commands/: command_buffer.cpp  command_buffers.cpp  command_pool.cpp  light_command_buffer.cpp  model_command_buffer.cpp
common/vulkan_wrapper/src/core/: instance.cpp  logical_device.cpp  physical_device.cpp  surface.cpp
common/vulkan_wrapper/src/descriptors/: descriptor_handle.cpp  descriptor_pool.cpp  descriptor_set.cpp  write_desctiptor_set.cpp
common/vulkan_wrapper/src/framebuffers/: framebuffers.cpp  renderpass.cpp  swapchain.cpp
common/vulkan_wrapper/src/images/: image.cpp  image2d.cpp  image_depth.cpp  texture_loader.cpp  texture_manager.cpp
common/vulkan_wrapper/src/material/: diffuse_material.cpp  material_manager.cpp
common/vulkan_wrapper/src/models/: cube.cpp  io_system.cpp  mesh.cpp  mesh_instance.cpp  model.cpp  model_loader.cpp  model_manager.cpp  quad.cpp  vertex_input.cpp
common/vulkan_wrapper/src/pipelines/: graphics_pipeline.cpp  material_pipeline.cpp  material_pipeline_container.cpp
common/vulkan_wrapper/src/render_stage/: render_stage.cpp
main/aer_editor/: CMakeLists.txt
main/aer_editor/src/: main.cpp
main/aer_game/: CMakeLists.txt
main/aer_game/src/: main.cpp
main/comp_graph/: CMakeLists.txt
main/comp_graph/src/: comp_graph_engine.cpp  logger_browser.cpp  main.cpp  proto_browser.cpp  sample_browser.cpp
main/feature_dev/: CMakeLists.txt
main/feature_dev/src/: main.cpp
main/showroom/: CMakeLists.txt
main/showroom/src/: camera.cpp  gizmos_renderer.cpp  main.cpp  showroom_engine.cpp  showroom_renderer.cpp  texture.cpp
main/vulkan_engine/: CMakeLists.txt
main/vulkan_engine/include/: vk_draw_system.h  vk_engine.h
main/vulkan_engine/src/: main.cpp  vk_draw_system.cpp  vk_engine.cpp
testAer/: CMakeLists.txt  test_editor.cpp  test_gizmos.cpp  test_hierarchy.cpp  test_input.cpp  test_log.cpp  test_logger.cpp  test_material_description.cpp  test_materials.cpp  test_performance.cpp  test_physx.cpp  test_project.cpp  test_scene.cpp  test_shaders.cpp
testAer/data/shaders/: quad_color.aershader
(+584 files in other folders)
